--- a/week_3_calculus.ipynb
+++ b/week_3_calculus.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T10:55:29.675531Z",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T10:55:32.649499Z",
@@ -154,10 +154,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.010000 --  0.0001\n",
-      "0.001000 --   1e-06\n",
-      "0.000100 --   1e-08\n",
-      "0.000010 --   1e-10\n"
+      "0.010000 -- -0.0002\n",
+      "0.001000 --  -2e-06\n",
+      "0.000100 --  -2e-08\n",
+      "0.000010 --  -2e-10\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T10:57:07.885511Z",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T10:57:47.265611Z",
@@ -353,10 +353,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.010000 -- -0.04605\n",
-      "0.001000 -- -0.006908\n",
-      "0.000100 -- -0.000921\n",
-      "0.000010 -- -0.0001151\n"
+      "0.010000 -- -0.01386\n",
+      "0.001000 -- -0.001386\n",
+      "0.000100 -- -0.0001386\n",
+      "0.000010 -- -1.386e-05\n"
      ]
     }
    ],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T11:02:46.147855Z",
@@ -545,11 +545,12 @@
     "        return np.sum(np.array([d * f(a + (j + 0.5) * d) for j in range(n)]))\n",
     "\n",
     "    n = int((b - a) / eps ** 0.5)\n",
+    "    i1 = i(func,a,b,n)\n",
     "    while True: \n",
-    "        i1 = i(func,a,b,n)\n",
     "        i2 = i(func,a,b,2 * n)\n",
     "        if abs(i2 - i1) < eps:\n",
     "            return i2, n * 2 \n",
+    "        i1 = i2 \n",
     "        n *= 2\n"
    ]
   },
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "hidden": true,
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "hidden": true,
@@ -724,10 +725,39 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Общее число итераций: 6553600\n",
+      "Число N/N_init: 2^ 16\n",
+      "Ошибка |Real - I|: 0.0002362877988233425\n",
+      "Улучшенное число итераций: 6488064\n",
+      "Улучшенное число N'/N_init: 2^ 16\n",
+      "Новая ошибка |Real - I'|: 0.00029479035511714713\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "res = 1.89216614\n",
+    "\n",
+    "\n",
+    "eps = 1e-4\n",
+    "N_init = int(1 / eps ** 0.5)\n",
+    "f = lambda x: np.sin(np.sqrt(x)) / x\n",
+    "I, N = midpoint_rule(f, 0, 1, eps)\n",
+    "\n",
+    "print(\"Общее число итераций:\", N)\n",
+    "print(\"Число N/N_init:\", \"2^\", int(np.log2(N / N_init)))\n",
+    "print(\"Ошибка |Real - I|:\", abs(I - res))\n",
+    "\n",
+    "N_init = int((1 - eps) / eps ** 0.5)\n",
+    "I, N = midpoint_rule(f, eps, 1, eps)\n",
+    "\n",
+    "print(\"Улучшенное число итераций:\", N)\n",
+    "print(\"Улучшенное число N'/N_init:\", \"2^\", int(np.log2(N / N_init)))\n",
+    "print(\"Новая ошибка |Real - I'|:\", abs(I - res))"
    ]
   },
   {
@@ -810,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T11:08:47.860563Z",
@@ -852,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-02T11:08:48.915905Z",
