Accedentally solved integral

--- a/advanced_Integrals.ipynb
+++ b/advanced_Integrals.ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T20:25:23.757358Z",
@@ -1114,7 +1114,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\TechnoDX\\AppData\\Local\\Temp\\ipykernel_10896\\778045123.py:4: IntegrationWarning: The integral is probably divergent, or slowly convergent.\n",
+      "  quad(lambda x: sin(x) * cos(cos(x)) / x, 0, float('inf'))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.9653912540956733, 4.089174284042322)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import sin, cos\n",
     "\n",
@@ -1123,6 +1142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1141,7 +1161,35 @@
    },
    "source": [
     "Напишите функцию, которая возвращает значение данного интеграла. Только само значение интеграла, без оценки погрешности.\n",
-    "(оборачиваем интеграл в функцию только для удобства автопроверки)."
+    "(оборачиваем интеграл в функцию только для удобства автопроверки).\n",
+    "\n",
+    "\n",
+    "Если мы посмотрим на форму функции $\\cos(\\cos(x))$ мы увидим, что она очень похожа на обычный сдвинутый косинус. Можно найти её очень простое приближение через разложение в ряд косинусов, что требует лишь взятие интеграла от 0 до $2\\pi$. Первый член разложение выражается через функцию Бесселя:\n",
+    "$$\n",
+    "a_0 = \\cfrac{1}{2\\pi}\\int_0^{2\\pi}\\cos(\\cos(x))dx = J_0(1)\n",
+    "$$\n",
+    "$$\n",
+    "a_1 = 0 \n",
+    "$$\n",
+    "\n",
+    "Все дальнейшие: \n",
+    "$$\n",
+    "a_n = \\cfrac{1}{\\pi}\\int_0^{\\pi}\\cos(\\cos(x))\\cos(nx)dx\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\int_0^\\infty \\cfrac{\\sin(x)\\cos(nx)}{x}dx = \\cfrac{\\pi^2}{2 \\cdot 2\\pi}\\int_0^\\infty I_{[-1,1]}(x)\\cdot(\\delta(n - \\omega) + \\delta(n + \\omega))d\\omega = \\begin{cases}\n",
+    "\\cfrac{\\pi}{2} & n = 0\\\\\n",
+    "\\cfrac{\\pi}{4} & n = 1\\\\\n",
+    "0 & n > 1\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Здесь мы непосредственно применили теорему Парсеваля, переведя $\\sin(x)/x$ в частотном представлении в индикатор $I_{[-1,1]}(\\omega)$ и косинус в две дельта-функции. Видно, что решение тогда есть при $n$ равном нулю и $1$ (причем в этом случае попадают только половинки дельта функции на концах индикатора, что уменьшило ответ в два раза), иначе $\\delta(2n - \\omega)$ не попадает в область действия индикатора. Это значит, что разложение $cos(\\cos(x))$ в ряд косинусов вовсе не имеет значение для $n > 1$ и нас интересует только первый член разложения: \n",
+    "\n",
+    "$$\n",
+    "\\int_0^{\\infty} \\cfrac{\\sin(x)\\cos(\\cos(x))dx}{x}dx = \\int_0^{\\infty}\\cfrac{a_0 \\sin(x)}{x}dx + \\int_0^{\\infty}\\cfrac{a_1\\cos(x) \\sin(x)}{x}dx + \\sum_{n =2}^\\infty \\int_0^{\\infty}\\cfrac{\\sin(x)\\cos(2nx)}{x}dx\n",
+    "$$"
    ]
   },
   {
