--- a/newton_iter.ipynb
+++ b/newton_iter.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NICKNAME = \"\""
+    "NICKNAME = \"nazar-si\""
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -45,7 +45,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy as sc \n",
+    "import scipy.special as sp"
    ]
   },
   {
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -133,13 +135,22 @@
     "    niter : int\n",
     "        Количество итераций.\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "\n",
+    "    px = x0 + eps * 2 # previous x\n",
+    "    x = x0\n",
+    "\n",
+    "    count = 0\n",
+    "    while abs(x - px) >= eps and count < maxiter:\n",
+    "        px = x\n",
+    "        x = x - f(x) / fder(x)\n",
+    "        count += 1\n",
+    "    \n",
+    "    return x, count \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -213,8 +224,13 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "xs = []\n",
+    "cs = [] \n",
+    "for i in range(1, 10):\n",
+    "    x, count = newton_iteration(lambda x: x ** 2 - 1, lambda x: 2 * x, 2, maxiter=i)\n",
+    "\n",
+    "\n",
+    "plt.plot()"
    ]
   },
   {
@@ -659,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -705,6 +721,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "28f83bf948cdec89b1141f0418316448765d7e0b251714ef4b1dc99f1a1aec48"
+   }
   }
  },
  "nbformat": 4,
