Some numpy tasks

--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "id": "cd2e7c9c",
    "metadata": {},
    "outputs": [
@@ -1169,95 +1169,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[[2.74329264]\n",
-      "   [1.87032744]\n",
-      "   [1.47943371]\n",
-      "   [2.54547831]]\n",
-      "\n",
-      "  [[2.29421769]\n",
-      "   [0.72643086]\n",
-      "   [1.5667344 ]\n",
-      "   [2.25156329]]\n",
-      "\n",
-      "  [[2.08872536]\n",
-      "   [1.20174827]\n",
-      "   [1.60037233]\n",
-      "   [2.13348346]]\n",
-      "\n",
-      "  [[2.42040327]\n",
-      "   [1.84551631]\n",
-      "   [1.48945431]\n",
-      "   [1.8084661 ]]]\n",
-      "\n",
-      "\n",
-      " [[[1.8065929 ]\n",
-      "   [2.1455597 ]\n",
-      "   [2.6641401 ]\n",
-      "   [1.67659892]]\n",
-      "\n",
-      "  [[1.4967386 ]\n",
-      "   [2.38792632]\n",
-      "   [1.6940841 ]\n",
-      "   [2.89335587]]\n",
-      "\n",
-      "  [[2.18472738]\n",
-      "   [2.59171535]\n",
-      "   [2.88301246]\n",
-      "   [1.52193477]]\n",
-      "\n",
-      "  [[2.30050985]\n",
-      "   [1.73050378]\n",
-      "   [1.44938774]\n",
-      "   [2.51507683]]]\n",
-      "\n",
-      "\n",
-      " [[[1.86036565]\n",
-      "   [1.90615365]\n",
-      "   [1.90668588]\n",
-      "   [1.82306615]]\n",
-      "\n",
-      "  [[2.24546161]\n",
-      "   [2.09310723]\n",
-      "   [1.49093515]\n",
-      "   [1.78931335]]\n",
-      "\n",
-      "  [[3.07979231]\n",
-      "   [1.9057323 ]\n",
-      "   [1.53740403]\n",
-      "   [2.19323048]]\n",
-      "\n",
-      "  [[2.14569457]\n",
-      "   [1.82911057]\n",
-      "   [2.52754991]\n",
-      "   [1.59451887]]]\n",
-      "\n",
-      "\n",
-      " [[[1.09550519]\n",
-      "   [2.16227874]\n",
-      "   [2.13501054]\n",
-      "   [1.15471741]]\n",
-      "\n",
-      "  [[1.65497173]\n",
-      "   [2.29473521]\n",
-      "   [2.50943437]\n",
-      "   [1.8466954 ]]\n",
-      "\n",
-      "  [[2.40387937]\n",
-      "   [2.03297053]\n",
-      "   [1.65938975]\n",
-      "   [2.44894362]]\n",
-      "\n",
-      "  [[2.19593849]\n",
-      "   [2.08127022]\n",
-      "   [2.45709824]\n",
-      "   [1.73010908]]]]\n"
+      "[[2.57603505 2.71862893 1.95481363 2.32601981]\n",
+      " [3.0916825  2.97346077 2.22420338 3.53116071]\n",
+      " [3.95135992 2.9688184  1.51721164 2.66737175]\n",
+      " [1.83016942 3.20399485 1.97666667 2.81899325]]\n"
      ]
     }
    ],
    "source": [
-    "T = np.random.rand(4, 4, 4, 4)\n",
+    "T = np.random.rand(4, 4, 3, 2)\n",
     "\n",
-    "print((T[:][:][:] @ np.ones((T.shape[3], 1)))[0] @ np.ones((T.shape[2], 1)) )\n"
+    "# дважды выполняем свертку с единичной матрицей, избавляясь в конце от одного индекса через [:,:,:,0] и [:,:,0] соответственно\n",
+    "print(((T @ np.ones((T.shape[3], 1)))[:,:,:,0] @ np.ones((T.shape[2], 1)))[:,:,0])\n"
    ]
   },
   {
@@ -1270,11 +1193,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "9b5a070d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84639276 0.66121956 0.22607211 0.90308204 0.12398416 0.4816577\n",
+      " 0.77161048 0.2716894  0.06385956 0.33734571] [5 3 4 6 1 8 2 7 4 9]\n",
+      "0.396450486566878\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = np.random.rand(10)\n",
+    "v2 = np.random.randint(10, size=10)\n",
+    "\n",
+    "print(v1, v2)\n",
+    "print(np.mean(v1[v2]))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1286,11 +1226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "ae437196",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.64762928, 0.63034358, 0.94916259, 0.83856115])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M1 = np.random.rand(4, 4)\n",
+    "M2 = np.random.rand(4, 4)\n",
+    "\n",
+    "np.sum(M1 * M2.T, axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
